--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,4 +1,14 @@
 <section>
-  <h1>About Me</h1>
-  <p>A little something about me.</p>
+  <h1>关于博主</h1><br/>
+  <a href="{{ root_url }}/aboutme/"><img src="{{ root_url }}/images/me.png" width="250px" height="210px" alt="protrait"/></a><br/>
+  <p>Hi, I'm Hujiawei, from P.R.China. Now I'm a postgraduate student studying in <a href="http://www.tsinghua.edu.cn/publish/th/index.html">Tsinghua University</a>.
+  Wanna know me? <a href="{{ root_url }}/aboutme/">See here.</a> <br/>	
+  </p>
+  <a href="http://weibo.com/hujiaweiyinger"><img src="{{ root_url }}/images/sinaweibo.png"/></a> &nbsp;
+  <a href="https://github.com/hujiaweibujidao"><img src="{{ root_url }}/images/github.png"/></a>&nbsp;
+  <a href="http://hujiawei.tumblr.com"><img src="{{ root_url }}/images/tumblr.png"/></a> &nbsp;
+  <a href="https://twitter.com/hujiaweiyinger"><img src="{{ root_url }}/images/twitter.png"/></a>
+  
+  <br/>
+  
 </section>
