--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -1,4 +1,4 @@
 <p>
-  Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} -
-  <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span>
+  Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} - <a href="http://happybirthday2yinger.duapp.com/">Happy birthday to MY QUEEN</a> -
+  <span class="credit">Proudly Powered by <a href="http://octopress.org">Octopress</a></span>
 </p>
