--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,7 +1,9 @@
 <ul class="main-navigation">
-  <li><a href="{{ root_url }}/">Blog</a></li>
+  <li><a href="{{ root_url }}/blog/archives/">Blog</a></li>
   <li><a href="{{ root_url }}/aboutme/">AboutMe</a></li>
   <li><a href="{{ root_url }}/math/">Math</a></li>
   <li><a href="{{ root_url }}/datamining/">DataMining</a></li>
+  <!--
   <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
+  -->
 </ul>
