--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -4,10 +4,10 @@
   <p>Hi, I'm Hujiawei, from P.R.China. Now I'm a postgraduate student studying in <a href="http://www.tsinghua.edu.cn/publish/th/index.html">Tsinghua University</a>.
   Wanna know me? <a href="{{ root_url }}/aboutme/">See here.</a> <br/>	
   </p>
-  <a href="http://weibo.com/hujiaweiyinger"><img src="{{ root_url }}/images/sinaweibo.png"/></a> &nbsp;
-  <a href="https://github.com/hujiaweibujidao"><img src="{{ root_url }}/images/github.png"/></a>&nbsp;
-  <a href="http://hujiawei.tumblr.com"><img src="{{ root_url }}/images/tumblr.png"/></a> &nbsp;
-  <a href="https://twitter.com/hujiaweiyinger"><img src="{{ root_url }}/images/twitter.png"/></a>
+  <a href="http://weibo.com/hujiaweiyinger"><img src="{{ root_url }}/images/sinaweibo.png" width="40px" height="40px"/></a> &nbsp;
+  <a href="https://github.com/hujiaweibujidao"><img src="{{ root_url }}/images/github.png" width="40px" height="40px"/></a>&nbsp;
+  <a href="http://hujiawei.tumblr.com"><img src="{{ root_url }}/images/tumblr.png" width="40px" height="40px"/></a> &nbsp;
+  <a href="https://twitter.com/hujiaweiyinger"><img src="{{ root_url }}/images/twitter.png" width="40px" height="40px"/></a>
   
   <br/>
   
