--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,6 +1,6 @@
 <section>
   <h1>关于博主</h1><br/>
-  <a href="{{ root_url }}/aboutme/"><img src="{{ root_url }}/images/me.png" width="250px" height="210px" alt="protrait"/></a><br/>
+  <a href="{{ root_url }}/aboutme/"><img src="{{ root_url }}/images/me-small.png" width="250px" height="210px" alt="protrait"/></a><br/>
   <p>Hi, I'm Hujiawei, from P.R.China. Now I'm a postgraduate student studying in <a href="http://www.tsinghua.edu.cn/publish/th/index.html">Tsinghua University</a>.
   Wanna know me? <a href="{{ root_url }}/aboutme/">See here.</a> <br/>	
   </p>
