--- a/source/_includes/navigation.html
+++ b/source/_includes/navigation.html
@@ -1,12 +1,11 @@
-<!--
 <ul class="subscription" data-subscription="rss{% if site.subscribe_email %} email{% endif %}">
 
-  <li><a href="https://github.com/hujiaweibujidao" rel="subscribe-rss" title="subscribe via RSS">View me on GitHub</a></li>
+  <!-- <li><a href="https://github.com/hujiaweibujidao" rel="subscribe-rss" title="subscribe via RSS">View me on GitHub</a></li> -->
   <li><a href="{{ site.subscribe_rss }}" rel="subscribe-rss" title="subscribe via RSS">RSS</a></li>
   {% if site.subscribe_email %}
     <li><a href="{{ site.subscribe_email }}" rel="subscribe-email" title="subscribe via email">Email</a></li>
   {% endif %} 
-</ul> -->
+</ul>
 
   <!--
   {% if site.simple_search %}
