--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -3,7 +3,7 @@
   <li><a href="{{ root_url }}/aboutme/">AboutMe</a></li>
   <li><a href="{{ root_url }}/math/">Math</a></li>
   <li><a href="{{ root_url }}/datamining/">DataMining</a></li>
-  <li><a href="{{ root_url }}/mobiledev/">MobileDev</a></li>
+  <li><a href="{{ root_url }}/blog/categories/mobiledev/">MobileDev</a></li>
   <!-- <li><a href="{{ root_url }}/datamining/">Projects</a></li> -->
   <!--
   <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
