add license and copyright

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -1,3 +1,5 @@
 // This File is imported last, and will override other styles in the cascade
 // Add styles here to make changes without digging in too much
+
+//post footer css
 .post-footer{border: 1px solid #61b72e;border-radius: 4px;box-shadow: 0 0 5px #F5F5F5;margin-top:10px;padding:5px;background:none repeat scroll 0pt 0pt #fff;font-size:90%;color:#61b72e}
