add android and opencv 4 and modify blog header

--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -1,5 +1,5 @@
-<hgroup>
-	<h1><a href="{{ root_url }}/"><img src="{{ root_url }}/images/dolphin-small.png"  />{{ site.title }}</a></h1>
+<hgroup style="text-align: center">
+	<h1><a href="{{ root_url }}/"><img src="{{ root_url }}/images/conan-paper-small.png"  />{{ site.title }}<img src="{{ root_url }}/images/conan-hat-small.png"  /></a></h1>
 	{% if site.subtitle %}
 	<h2>{{ site.subtitle }}</h2>
 	{% endif %}
