--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -1,7 +1,7 @@
 <p>
   	Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} - <a href="http://happybirthday2yinger.duapp.com/">Happy birthday to MY QUEEN</a> - <span class="credit">Proudly Powered by <a href="http://octopress.org">Octopress</a></span>
   	
-  	<!-- mathjax config similar to math.stackexchange -->
+<!-- mathjax config similar to math.stackexchange 
 <script type="text/x-mathjax-config">
 MathJax.Hub.Config({
   jax: ["input/TeX", "output/HTML-CSS"],
@@ -16,6 +16,9 @@ MathJax.Hub.Config({
 });
 </script>
 <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML" type="text/javascript"></script>
+-->
+
+<script type="text/javascript" src="https://stackedit.io/libs/MathJax/MathJax.js?config=TeX-AMS_HTML"></script>
   	
 	<!-- CNZZ -->
 	&nbsp;&nbsp;
