--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -1,7 +1,7 @@
 <p>
   	Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} - <a href="http://happybirthday2yinger.duapp.com/">Happy birthday to MY QUEEN</a> - <span class="credit">Proudly Powered by <a href="http://octopress.org">Octopress</a></span>
   	
-<!-- mathjax config similar to math.stackexchange 
+<!-- mathjax config similar to math.stackexchange  -->
 <script type="text/x-mathjax-config">
 MathJax.Hub.Config({
   jax: ["input/TeX", "output/HTML-CSS"],
@@ -16,10 +16,12 @@ MathJax.Hub.Config({
 });
 </script>
 <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML" type="text/javascript"></script>
+
+<!-- the following line is incorrect! -->
+<!--
+<script type="text/javascript" src="https://stackedit.io/libs/MathJax/MathJax.js?config=TeX-AMS_HTML"></script>
 -->
 
-<script type="text/javascript" src="https://stackedit.io/libs/MathJax/MathJax.js?config=TeX-AMS_HTML"></script>
-  	
 	<!-- CNZZ -->
 	&nbsp;&nbsp;
 	<script type="text/javascript">
@@ -33,6 +35,33 @@ MathJax.Hub.Config({
 
 </p>
 
+<!--hujiawei custom blockquote-->
+<!-- gutter for code line-numbers!! -->
+
+<!--
+<style>
+blockquote{
+	font:inherit;
+	font-size:60%;
+	font-style:normal;
+	line-height:1.0em;
+	color:rgba(0,0,0,0.5);
+}
+
+.gutter{
+	display: none;
+}
+
+.highlight, .gist-highlight {
+margin-bottom: 1.8em;
+background: #002b36;
+overflow-y: hidden;
+overflow-x: auto;
+}
+</style>
+-->
+
+<!--return to top-->
 <style>
 	.returnTop {
 		position: fixed;
