--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -9,5 +9,8 @@
   <a href="http://hujiawei.tumblr.com"><img src="{{ root_url }}/images/tumblr.png" width="40px" height="40px"/></a> &nbsp;
   <a href="https://twitter.com/hujiaweiyinger"><img src="{{ root_url }}/images/twitter.png" width="40px" height="40px"/></a>
   
+  <img src="{{ root_url }}/images/conan-mainperson.png" width="250px" height="210px" alt="conan"/>
+  
+  
   <br/>
 </section>
