--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -2,15 +2,23 @@
 	<h1>关于博主</h1><br/>
   <a href="{{ root_url }}/aboutme/"><img src="{{ root_url }}/images/me-small.png" width="250px" height="210px" alt="protrait"/></a><br/>
   <p>Hi, I'm Hujiawei, from P.R.China. Now I'm a postgraduate student studying in <a href="http://www.tsinghua.edu.cn/publish/th/index.html">Tsinghua University</a>.
-  Wanna know me? <a href="{{ root_url }}/aboutme/">See here.</a> <br/>	
+  Wanna know me? <a href="{{ root_url }}/aboutme/">See here.</a> 
   </p>
-  <a href="http://weibo.com/hujiaweiyinger"><img src="{{ root_url }}/images/sinaweibo.png" width="40px" height="40px"/></a> &nbsp;
+  
+    <a href="http://weibo.com/hujiaweiyinger"><img src="{{ root_url }}/images/sinaweibo.png" width="40px" height="40px"/></a> &nbsp;
   <a href="https://github.com/hujiaweibujidao"><img src="{{ root_url }}/images/github.png" width="40px" height="40px"/></a>&nbsp;
   <a href="http://hujiawei.tumblr.com"><img src="{{ root_url }}/images/tumblr.png" width="40px" height="40px"/></a> &nbsp;
-  <a href="https://twitter.com/hujiaweiyinger"><img src="{{ root_url }}/images/twitter.png" width="40px" height="40px"/></a>
-  
+  <a href="https://twitter.com/hujiaweiyinger"><img src="{{ root_url }}/images/twitter.png" width="40px" height="40px"/></a>&nbsp;
+  <a href="http://www.douban.com/people/60272837/"><img src="{{ root_url }}/images/douban.png" width="40px" height="40px"/></a>
+ 
+    <br/><br/>
+    
   <img src="{{ root_url }}/images/conan-mainperson.png" width="250px" height="210px" alt="conan"/>
   
-  
   <br/>
+  
+  <div class="bdsharebuttonbox"><a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_douban" data-cmd="douban" title="分享到豆瓣网"></a><a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a><a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a><a href="#" class="bds_tqq" data-cmd="tqq" title="分享到腾讯微博"></a><a href="#" class="bds_renren" data-cmd="renren" title="分享到人人网"></a><a href="#" class="bds_twi" data-cmd="twi" title="分享到Twitter"></a><a href="#" class="bds_fbook" data-cmd="fbook" title="分享到Facebook"></a></div>
+<script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"1","bdSize":"24"},"share":{}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>  
+
+
 </section>
