--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -2,9 +2,8 @@
   <li><a href="{{ root_url }}/blog/archives/">Blog</a></li>
   <li><a href="{{ root_url }}/aboutme/">AboutMe</a></li>
   <li><a href="{{ root_url }}/math/">Math</a></li>
-  <!--
-  <li><a href="{{ root_url }}/datamining/">DataMining</a></li>
-  -->
+  <li><a href="{{ root_url }}/python/">Python</a></li>
+  <li><a href="{{ root_url }}/datamining/">ML-DM-PR</a></li>
   <li><a href="{{ root_url }}/blog/categories/mobiledev/">MobileDev</a></li>
   <!--
   <li><a href="{{ root_url }}/xjava/">XJava</a></li>
