--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -5,6 +5,8 @@
   <li><a href="{{ root_url }}/python/">Python</a></li>
   <li><a href="{{ root_url }}/datamining/">ML-DM-PR</a></li>
   <li><a href="{{ root_url }}/blog/categories/mobiledev/">MobileDev</a></li>
+  <li><a href="{{ root_url }}/blog/categories/music/">Music</a></li>
+  <li><a href="{{ root_url }}/blog/categories/picture/">Picture</a></li>
   <!--
   <li><a href="{{ root_url }}/xjava/">XJava</a></li>
   -->
