--- a/source/_layouts/page.html
+++ b/source/_layouts/page.html
@@ -40,6 +40,17 @@ footer: true
 	</section>
 	{% endif %}
 
+	
+	{% if site.duoshuo_short_name and site.duoshuo_comments == true and page.comments == true %}
+	<section>
+		<h1>Comments</h1>
+		<div id="comments" aria-live="polite">
+			{% include post/duoshuo.html %}
+		</div>
+	</section>
+	{% endif %}
+
+
 </div>
 {% unless page.sidebar == false %}
 <aside class="sidebar">
