add page mobile

--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -4,6 +4,7 @@
   <li><a href="{{ root_url }}/math/">Math</a></li>
   <li><a href="{{ root_url }}/python/">Python</a></li>
   <li><a href="{{ root_url }}/datamining/">ML-DM-PR</a></li>
+  <li><a href="{{ root_url }}/blog/categories/algorithm/">Algorithms</a></li>
   <li><a href="{{ root_url }}/blog/categories/mobiledev/">MobileDev</a></li>
   <li><a href="{{ root_url }}/blog/categories/music/">Music</a></li>
   <li><a href="{{ root_url }}/blog/categories/picture/">Picture</a></li>
