--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -9,14 +9,16 @@
   
   <br/>
   
-    <a href="http://weibo.com/hujiaweiyinger"><img src="{{ root_url }}/images/sinaweibo.png" width="40px" height="40px"/></a> &nbsp;
+  <a href="http://weibo.com/hujiaweiyinger"><img src="{{ root_url }}/images/sinaweibo.png" width="40px" height="40px"/></a> &nbsp;
   <a href="https://github.com/hujiaweibujidao"><img src="{{ root_url }}/images/github.png" width="40px" height="40px"/></a>&nbsp;
   <a href="http://hujiawei.tumblr.com"><img src="{{ root_url }}/images/tumblr.png" width="40px" height="40px"/></a> &nbsp;
   <a href="https://twitter.com/hujiaweiyinger"><img src="{{ root_url }}/images/twitter.png" width="40px" height="40px"/></a>&nbsp;
   <a href="http://www.douban.com/people/60272837/"><img src="{{ root_url }}/images/douban.png" width="40px" height="40px"/></a>
  
  <br/>
-    
+ <br/>
+ <iframe width="100%" height="550" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?language=&width=0&height=550&fansRow=2&ptype=1&speed=50&skin=1&isTitle=0&noborder=1&isWeibo=1&isFans=0&uid=1740244950&verifier=68702156&dpc=1"></iframe>
+    <br/>
     <!--autoplay="autoplay" -->
     <!--
 <audio width="200" height="32" 
