--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -5,6 +5,10 @@
   Wanna know me? <a href="{{ root_url }}/aboutme/">See here.</a> 
   </p>
   
+  <p>
+	  博主最近参加了一个线上黑客马拉松比赛，暂时的作品在[这里](http://shanshanlaichi.sinaapp.com)，欢迎大家访问并点赞支持！谢谢亲们！
+  </p>
+  
   <img src="{{ root_url }}/images/conan-mainperson.png" width="250px" height="210px" alt="conan"/>
   
   <br/>
