--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -6,6 +6,7 @@
   <li><a href="{{ root_url }}/mobile/">Mobile</a></li>
   
   <li><a href="{{ root_url }}/blog/categories/algorithm/">Algorithms</a></li>
+  <li><a href="{{ root_url }}/blog/categories/oj/">OJSolutions</a></li>
   <!--
   <li><a href="{{ root_url }}/blog/categories/mobiledev/">MobileDev</a></li>
   <li><a href="{{ root_url }}/datamining/">ML-DM-PR</a></li>
